<resources>
    <string name="app_name">PT 16</string>
    <string name="company_logo">company logo</string>
    <string name="app_connect">App Connect</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="log_in">Log in</string>
</resources>